check_output.txt
    Checking dengine v0.1.0 (D:\Dev\Porjetos\Dengine)
error[E0061]: this method takes 4 arguments but 3 arguments were supplied
    --> src\inspector.rs:1019:78
     |
1019 |   ...                   ui.painter().rect_stroke(
     |  ____________________________________^^^^^^^^^^^-
1020 | | ...                       resp.rect.expand(2.0),
1021 | | ...                       4.0,
1022 | | ...                       Stroke::new(
...    |
1027 | | ...                       ),
1028 | | ...                   );
     | |_______________________- argument #4 of type `StrokeKind` is missing
     |
note: method defined here
    --> C:\Users\DJDUM\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\egui-0.33.3\src\painter.rs:447:12
     |
 447 |     pub fn rect_stroke(
     |            ^^^^^^^^^^^
help: provide the argument
     |
1019 |                                                                 ui.painter().rect_stroke(
 ...
1027 |                                                                     ),
1028 ~                                                                     /* StrokeKind */,
1029 ~                                                                 );
     |

warning: unreachable pattern
    --> src\viewport.rs:2238:25
     |
2238 |                         _ => {}
     |                         ^ no value can reach this
     |
note: multiple earlier patterns match some of the same values
    --> src\viewport.rs:2238:25
     |
2199 |                         gltf::image::Source::Uri { uri, .. } => {
     |                         ------------------------------------ matches some of the same values
...
2203 |                         gltf::image::Source::View { view, mime_type } => {
     |                         --------------------------------------------- matches some of the same values
...
2238 |                         _ => {}
     |                         ^ collectively making this unreachable
     = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0061`.
warning: `dengine` (bin "dengine") generated 1 warning
error: could not compile `dengine` (bin "dengine") due to 1 previous error; 1 warning emitted
